# NonVectorMCP

./: .env.example  .env.nanobot  .env.nanobot.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/MemoryBank/: activeContext.md  productContext.md  projectbrief.md  systemPatterns.md  techContext.md
backend/: agent_debug_log.py  config.py  database.py  logger.py  main.py  storage.py
backend/auth/: github_oauth.py  invite_codes.py  middleware.py
backend/chat/: chat_service.py  (+2 more)
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.nanobot.yml  docker-compose.yml  nginx.conf
docs/: deployment.md  library-nanobot-troubleshooting.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
indexers/: Agents.md  README.md  __init__.py  build_index.py  build_index_with_cross_refs.py  config.example.py
mcp_server/: README.md  config.example.py  config.py  logger.py  requirements.txt  server.py  vporag-mcp.service
scripts/: Deploy-Nanobot.ps1  Sync-NanobotWorker.ps1  activeContext.md  apply_nanobot_ollama_fix.sh  deploy_chunkylink.sh  deploy_nanobot_worker.sh  diagnose_chunkylink_chat.sh  force_nanobot_26b.sh  init_chunkylink_git_on_server.sh  install_nanobot_worker_from_home.sh  link_chunkylink_git_remote.sh  seed_demo.py  setup_macmini.sh  simulate_library_worker_local.py  systemPatterns.md
tests/: conftest.py  test_library_flow.py
worker/: Dockerfile  config.py  main.py  queue_consumer.py  requirements.txt
(+82 files in other folders)
